# internal/modules/v1/category/routes.go
@@ -2,6 +2,7 @@ package category
 
 import (
 	"haircompany-shop-rest/internal/container"
+	"haircompany-shop-rest/internal/middleware"
 	"haircompany-shop-rest/pkg/response"
 	"net/http"
 )
@@ -11,15 +12,21 @@ func RegisterV1CategoryRoutes(mux *http.ServeMux, container *container.Container
 	svc := NewService(repo, container.FileService, container.Ctx, container.Wg)
 	h := NewHandler(svc)
 
-	mux.HandleFunc("/category/create", func(w http.ResponseWriter, r *http.Request) {
-		switch r.Method {
-		case http.MethodPost:
-			h.Create(w, r)
-		default:
-			msg := "Method not allowed. Allowed methods: POST"
-			response.SendError(w, http.StatusMethodNotAllowed, msg, response.MethodNotAllowed)
-		}
-	})
+	mux.Handle("/category/create",
+		middleware.ChainMiddleware(
+			http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+				switch r.Method {
+				case http.MethodPost:
+					h.Create(w, r)
+				default:
+					msg := "Method not allowed. Allowed methods: POST"
+					response.SendError(w, http.StatusMethodNotAllowed, msg, response.MethodNotAllowed)
+				}
+			}),
+			middleware.DashboardRoleMiddleware("admin"),
+			middleware.DashboardAuthMiddleware(container.JWTService),
+		),
+	)
 
 	mux.HandleFunc("/category", func(w http.ResponseWriter, r *http.Request) {
 		switch r.Method {
@@ -41,23 +48,35 @@ func RegisterV1CategoryRoutes(mux *http.ServeMux, container *container.Container
 		}
 	})
 
-	mux.HandleFunc("/category/{id}/update", func(w http.ResponseWriter, r *http.Request) {
-		switch r.Method {
-		case http.MethodPatch:
-			h.Update(w, r)
-		default:
-			msg := "Method not allowed. Allowed methods: PATCH"
-			response.SendError(w, http.StatusMethodNotAllowed, msg, response.MethodNotAllowed)
-		}
-	})
+	mux.Handle("/category/{id}/update",
+		middleware.ChainMiddleware(
+			http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+				switch r.Method {
+				case http.MethodPatch:
+					h.Update(w, r)
+				default:
+					msg := "Method not allowed. Allowed methods: PATCH"
+					response.SendError(w, http.StatusMethodNotAllowed, msg, response.MethodNotAllowed)
+				}
+			}),
+			middleware.DashboardRoleMiddleware("admin"),
+			middleware.DashboardAuthMiddleware(container.JWTService),
+		),
+	)
 
-	mux.HandleFunc("/category/{id}/delete", func(w http.ResponseWriter, r *http.Request) {
-		switch r.Method {
-		case http.MethodDelete:
-			h.Delete(w, r)
-		default:
-			msg := "Method not allowed. Allowed methods: PATCH"
-			response.SendError(w, http.StatusMethodNotAllowed, msg, response.MethodNotAllowed)
-		}
-	})
+	mux.Handle("/category/{id}/delete",
+		middleware.ChainMiddleware(
+			http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+				switch r.Method {
+				case http.MethodDelete:
+					h.Delete(w, r)
+				default:
+					msg := "Method not allowed. Allowed methods: PATCH"
+					response.SendError(w, http.StatusMethodNotAllowed, msg, response.MethodNotAllowed)
+				}
+			}),
+			middleware.DashboardRoleMiddleware("admin"),
+			middleware.DashboardAuthMiddleware(container.JWTService),
+		),
+	)
 }
